Fixed white space on officer images

--- a/main.css
+++ b/main.css
@@ -1196,7 +1196,7 @@ li ul {
 	height: 70px;
 }
 .pastofficer img {
-	height: 210px;
+	height: 300px;
 }
 
 .pastofficer .bio h2 {
